Fix image wrapper taking more height than actual image
Problem:
- I've set the height of actual image to be 500px. The computed height
  for image wrapper is 506px, which is greater > 500px. Although, I've
  set width and height of fallback image (low resolution image) to be
  100% of width and height. So ideally, the height of the fallback image
  should also be equal to height of the actual image.

Solution:
- The cause of this problem was, since the images are inline by default,
  they add unwanted whitespace below them due to text-line spacing. This
  sometime causes misalignment in layouts.
- To fix this, use display:block which removes extra whitespace and
  ensures the image takes up only its own space.
- Once extra space is removed, the image-wrapper would have same height
  as of actual image viz 500px.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
 
 .image-wrapper {
   position: relative;
-  padding: 8px;
+  margin: 8px;
 }
 
 .image-wrapper::before {
@@ -59,6 +59,8 @@ main {
 }
 
 img {
+  /* Since images are inline by default, they add unwanted whitespace below them due to text-line spacing. This can cause misalignment in layouts. To fix this, use display:block which removes extra whitespace and ensures the image takes up only its own space. */
+  display: block;
   width: calc(90vw / 3);
   height: 500px;
   object-fit: cover;
